2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* PCI_bus/Makefile.am: Remove all-local: $(ARCH).
	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* tod/Makefile.am: Remove all-local: $(ARCH).
	* vectors/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* PCI_bus/PCI.h, clock/clock.c, console/85c30.c, console/85c30.h,
	console/console.c, console/consolebsp.h,
	console/consolereserveresources.c, console/tbl85c30.c, include/bsp.h,
	include/coverhd.h, include/gen2.h, include/tod.h, startup/FPGA.c,
	startup/bspclean.c, startup/bspstart.c, startup/genpvec.c,
	startup/setvec.c, startup/vmeintr.c, timer/timer.c, tod/tod.c: URL
	for license changed.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* PCI_bus/PCI.c, PCI_bus/flash.c, PCI_bus/universe.c: Removed incorrect
	statement about copyright assignment.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* PCI_bus/Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.